feat: finalize branding, AI command center, and currency normalization

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -22,8 +22,13 @@
 
     <title>Biz-CoPilot - Uw Zakelijke Co-Piloot | Uitgavenbeheer & Facturatie</title>
     
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/branding/logo/favicon.svg">
+    <!-- Favicons -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    <link rel="icon" type="image/png" sizes="32x32" href="/branding/favicon/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/branding/favicon/favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/branding/favicon/favicon_io/apple-touch-icon.png">
+    <link rel="shortcut icon" href="/branding/favicon/favicon_io/favicon.ico">
+    <link rel="manifest" href="/branding/favicon/favicon_io/site.webmanifest">
     
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -40,7 +45,7 @@
         :root {
             --primary: #4F46E5;
             --primary-dark: #4338CA;
-            --secondary: #9333EA;
+            --secondary: #00BFA6;
             --accent: #EC4899;
             --text-dark: #1F2937;
             --text-light: #6B7280;
@@ -292,7 +297,7 @@
     <nav>
         <div class="container nav-container">
             <a href="/" class="logo">
-                <img src="../public/branding/logo/logo-light.svg" alt="Biz-CoPilot Logo">
+                <img src="../public/branding/logo/logo-icon-v2.svg" alt="Biz-CoPilot Logo">
                 <span class="logo-text">Biz-CoPilot</span>
             </a>
             <a href="https://app.biz-copilot.nl/login" class="cta-button">Inloggen</a>
