--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Favicons -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/branding/logo/logo-icon.svg" />
     <link rel="icon" type="image/png" sizes="32x32" href="/branding/favicon/favicon_io/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/branding/favicon/favicon_io/favicon-16x16.png" />
     <link rel="shortcut icon" href="/branding/favicon/favicon_io/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="/branding/favicon/favicon_io/apple-touch-icon.png" />
     <link rel="manifest" href="/branding/favicon/favicon_io/site.webmanifest" />
+    <link rel="mask-icon" href="/branding/favicon/safari-pinned-tab.svg" color="#0f3f3a" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
     <!-- Primary Meta Tags -->
